fix(site): fix slide overflow on demos

--- a/site/scss/main.scss
+++ b/site/scss/main.scss
@@ -326,6 +326,7 @@ body {
 
 .slider {
   height: $example-slider-height;
+  overflow: hidden;
   width: $example-slider-width;
 }
 
